# Apollo

./: .gitmodules  CMakeLists.txt  adddense.cpp  adddense.h  adddense.ui  addsigmoid.cpp  addsigmoid.h  addsigmoid.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  todo.txt  train.cpp  train.h  train.ui  trainmodel.cpp  trainmodel.h  trainmodel.ui
